--- a/package.json
+++ b/package.json
@@ -1,20 +1,41 @@
 {
-  "name": "minimal-next-deploy",
-  "version": "1.0.0",
+  "name": "oretec-compatible-setup",
   "private": true,
+  "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint --max-warnings=0",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "next": "^13.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/supabase-js": "^2.45.4",
+    "framer-motion": "^10.18.0",
+    "lucide-react": "^0.441.0",
+    "next": "^14.2.32",
+    "pg": "8.16.3",
+    "react": "18.2.0",
+    "react-countup": "^6.5.3",
+    "react-dom": "18.2.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "24.5.1",
-    "@types/react": "19.1.13",
-    "typescript": "5.9.2"
+    "@types/node": "20.11.30",
+    "@types/pg": "8.15.5",
+    "@types/qrcode": "^1.5.5",
+    "@types/react": "18.2.66",
+    "@types/react-dom": "18.2.22",
+    "@typescript-eslint/eslint-plugin": "7.2.0",
+    "@typescript-eslint/parser": "7.2.0",
+    "autoprefixer": "10.4.18",
+    "dotenv": "^17.2.2",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.5",
+    "postcss": "8.4.35",
+    "supabase": "^2.39.2",
+    "tailwindcss": "3.4.4",
+    "typescript": "5.4.5"
   }
 }
