--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.45.4",
     "framer-motion": "^10.18.0",
     "lucide-react": "^0.441.0",
+    "mercadopago": "^2.9.0",
     "next": "^14.2.32",
     "pg": "8.16.3",
     "react": "18.2.0",
