--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@supabase/supabase-js": "^2.57.4",
     "@types/node": "^20.14.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -27,5 +28,7 @@
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
   },
-  "overrides": { "eslint": "8.57.1" }
+  "overrides": {
+    "eslint": "8.57.1"
+  }
 }
