--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.45.0",
     "framer-motion": "^11.2.10",
     "mercadopago": "^2.2.0",
     "next": "14.2.5",
@@ -27,5 +28,7 @@
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
   },
-  "overrides": { "eslint": "8.57.1" }
+  "overrides": {
+    "eslint": "8.57.1"
+  }
 }
