--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "mercadopago": "^2.2.0",
     "next": "14.2.5",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "@supabase/supabase-js": "^2.45.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.12",
@@ -27,5 +28,7 @@
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
   },
-  "overrides": { "eslint": "8.57.1" }
+  "overrides": {
+    "eslint": "8.57.1"
+  }
 }
