--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.58.0",
     "framer-motion": "^11.2.10",
+    "lucide-react": "^0.544.0",
     "mercadopago": "^2.2.0",
     "next": "14.2.5",
     "react": "18.3.1",
