--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mercadopago/sdk-react": "^1.0.6",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.58.0",
     "framer-motion": "^11.2.10",
     "lucide-react": "^0.544.0",
-    "mercadopago": "^2.2.0",
+    "mercadopago": "^2.9.0",
     "next": "14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -23,6 +24,8 @@
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/node": "^20.14.12",
     "@types/react": "^18.3.3",
@@ -33,11 +36,9 @@
     "eslint-config-next": "14.2.5",
     "husky": "^9.1.5",
     "lint-staged": "^15.2.10",
-    "@commitlint/cli": "^19.5.0",
-    "@commitlint/config-conventional": "^19.5.0",
+    "postcss": "^8.4.38",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
-    "postcss": "^8.4.38",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
   },
