--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
-      "eslint --fix"
+      "prettier --write"
     ],
     "*.{md,css,json}": [
       "prettier --write"
