--- a/package.json
+++ b/package.json
@@ -39,8 +39,9 @@
     "postcss": "^8.4.38",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
-    "tailwindcss": "^3.4.10",
-    "typescript": "^5.5.4"
+    "tailwindcss": "^4.1.15",
+    "typescript": "^5.5.4",
+    "@tailwindcss/postcss": "^4.1.15"
   },
   "overrides": {
     "eslint": "8.57.1"
