--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@mercadopago/sdk-react": "^1.0.6",
-    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.5.0",
     "@supabase/supabase-js": "^2.58.0",
     "framer-motion": "^11.2.10",
     "lucide-react": "^0.544.0",
