--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "postinstall": "node scripts/inject-env.mjs",
     "prepare": "husky",
+    "ae": "node scripts/ae_orchestrator.mjs",
+    "clean:backups": "node scripts/clean_backups.mjs",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -27,27 +29,31 @@
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/postcss": "^4.1.15",
     "@types/node": "^20.14.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
     "autoprefixer": "^10.4.18",
     "dotenv": "^17.2.3",
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.5",
     "husky": "^9.1.5",
     "lint-staged": "^15.2.10",
+    "playwright": "^1.56.1",
     "postcss": "^8.4.38",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^4.1.15",
-    "typescript": "^5.5.4",
-    "@tailwindcss/postcss": "^4.1.15"
+    "typescript": "^5.5.4"
   },
   "overrides": {
     "eslint": "8.57.1"
   },
   "lint-staged": {
-    "*.{ts,tsx,js,jsx}": [
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
       "prettier --write"
     ],
     "*.{md,css,json}": [
