--- a/package.json
+++ b/package.json
@@ -19,26 +19,27 @@
     "framer-motion": "^11.2.10",
     "lucide-react": "^0.544.0",
     "mercadopago": "^2.9.0",
-    "next": "14.2.5",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "next": "^16.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "translate-google": "^1.5.0",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
+    "@next/eslint-plugin-next": "^16.0.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/postcss": "^4.1.15",
     "@types/node": "^20.14.12",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
+    "@types/react": "19.2.2",
+    "@types/react-dom": "^19.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
     "autoprefixer": "^10.4.18",
     "dotenv": "^17.2.3",
-    "eslint": "8.57.1",
-    "eslint-config-next": "14.2.5",
+    "eslint": "^9.0.0",
+    "eslint-plugin-react-hooks": "^5.0.0",
     "husky": "^9.1.5",
     "lint-staged": "^15.2.10",
     "playwright": "^1.56.1",
@@ -49,7 +50,7 @@
     "typescript": "^5.5.4"
   },
   "overrides": {
-    "eslint": "8.57.1"
+    "eslint": "^9.0.0"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
